Add feature flag for store and update component styles and dependencies

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,44 @@
 // app global css in SCSS form
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.3);
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-track:hover {
+  background: transparent;
+}
+
+.text-lighter {
+  color: $lighter !important;
+}
+
+.text-lightest {
+  color: $lightest !important;
+}
+
+.bg-lighter {
+  background-color: $lighter !important;
+}
+
+.bg-lightest {
+  background-color: $lightest !important;
+}
+
+.top-left-rounded {
+  border-top-left-radius: $generic-border-radius;
+}
